GANTRYFIVE-105: Fixed issues with drop delete being covered by Joomla navbar

--- a/platforms/common/css-compiled/admin.css
+++ b/platforms/common/css-compiled/admin.css
@@ -1388,7 +1388,7 @@ a {
     top: -100px;
     right: 0;
     left: 0;
-    z-index: 50;
+    z-index: 1200;
     text-align: center;
     font-weight: bold;
     color: #fff;
