--- a/platforms/common/scss/admin/_layout-manager.scss
+++ b/platforms/common/scss/admin/_layout-manager.scss
@@ -512,7 +512,7 @@ $stripes: linear-gradient(45deg, #ccc 25%, darken(#ccc, 3%) 25%, darken(#ccc, 3%
         top: -100px;
         right: 0;
         left: 0;
-        z-index: 50;
+        z-index: 1200;
         text-align: center;
         font-weight: bold;
         color: $white;
